objects/Custom_FRUP__c.object
<CustomObject>
    <fields>
        <fullName>CustomKey__c</fullName>
        <externalId>true</externalId>
        <label>CustomKey</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <externalId>true</externalId>
        <label>FolderId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentFolderId__c</fullName>
        <externalId>true</externalId>
        <label>ParentFolderId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Custom FRUP</label>
    <nameField>
        <label>Custom FRUP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom FRUP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>